Fixed width div, removing element from order to prevent wrapping Refs #2

--- a/static/css/weever.css
+++ b/static/css/weever.css
@@ -19,7 +19,7 @@
 */
 
 /* Content */
-.wrap { width: 940px; padding-right: 20px; }
+.wrap { min-width: 900px; padding-right: 20px; }
 
 /* Adminlist grids */
 
